--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
-    font-family:'poppins',sans-serif;
+    padding:0;
+    margin:0;
+    font-family: 'Poppins', sans-serif;
 }
 
 h1{
@@ -18,3 +20,28 @@ h1{
      width:70%;
      padding-left:30%;
  }
+ .top{
+     background-image:url(image/top.png);
+     background-repeat:no-repeat;
+ }
+ section{
+     height: 500px;
+     padding-bottom: 150px;
+ }
+ .link-batton{
+     text-decoration:none;
+     background-image:linear-gradient(45deg, lightsalmon,tomato);
+     padding:10px 20px;
+     border-radius:7px;
+     color:white;
+     font-weight:bold;
+ }
+ .two{
+     background-image:url(image/two.png);
+     background-repeat:no-repeat; 
+     background-position:right;
+ }
+ .two img{
+     padding-left:30px;
+ }
+
