--- a/style.css
+++ b/style.css
@@ -1,20 +1,21 @@
 body{
     padding:0;
     margin:0;
-    font-family: 'Poppins', sans-serif;
+    font-family: sans-serif;
 }
 
 h1{
-    font-size: 50px;
+    font-size:50px;
 }
 .name{
     color: aquamarine;
 }  
  .width{
-    width:40%;
+    width:35%;
     float:left; 
-    margin-left:30px;
+    margin-left:93px;
     padding-left:40px;
+    margin-top:45Px;
  }
  .width img {
      width:70%;
@@ -44,4 +45,38 @@ h1{
  .two img{
      padding-left:30px;
  }
-
+ .two .width{
+    width:35%;
+    float:left; 
+    margin-left:93px;
+    padding-left:40px;
+    margin-top:45Px;
+ }
+ p{
+     color: dimgray;
+ }
+.three .width{
+     box-shadow:10px 10px 40px gray;
+     border-radius: 5px;
+     height:70%;
+ }
+.three{
+    background-image: url(image/exp-bg.png);
+    background-repeat:no-repeat;
+    background-position: left;   
+}
+#full{
+    border-left:7px solid blue;
+    border-image-slice:1;
+}
+#full2{
+    border-left:7px solid orange;
+  
+}
+.three .width{
+    margin-right: 85px;
+}
+footer p{
+    text-align: center;
+    font-size:12px;
+}
